adding depends for te hard shit(bot)

--- a/pom.xml
+++ b/pom.xml
@@ -127,5 +127,10 @@
           <version>${kotlin.version}</version>
           <scope>test</scope>
       </dependency>
+      <dependency>
+          <groupId>me.jakejmattson</groupId>
+          <artifactId>DiscordKt</artifactId>
+          <version>0.24.0</version>
+      </dependency>
   </dependencies>
 </project>
