--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,4 @@
 token: ""
 force-verifying: false
-expiration-time: 120 # 2 minutes
+# In seconds. Exemple: 120 seconds = 2 minutes. 0 = no expiration
+expiration-time: 120
