--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,6 @@
+# The token of your Discord bot. Can be found in your developer portal
 token: ""
+# If enabled, players will not be able to connect if they are not verified. They will be kicked with the code to verify in the kick message.
 force-verifying: false
 # In seconds. Exemple: 120 seconds = 2 minutes. 0 = no expiration
 expiration-time: 0
