--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,5 @@
 # The token of your Discord bot. Can be found in your developer portal
-token: ""
+token: "My token"
 # If enabled, players will not be able to connect if they are not verified. They will be kicked with the code to verify in the kick message.
 force-verifying: false
 # In seconds. Example: 120 seconds = 2 minutes. 0 = no expiration
