--- a/pom.xml
+++ b/pom.xml
@@ -128,9 +128,9 @@
           <scope>test</scope>
       </dependency>
       <dependency>
-          <groupId>net.dv8tion</groupId>
-          <artifactId>JDA</artifactId>
-          <version>5.0.0-beta.20</version>
+          <groupId>com.discord4j</groupId>
+          <artifactId>discord4j-core</artifactId>
+          <version>3.2.6</version>
       </dependency>
   </dependencies>
 </project>
